# maestro-service

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  env-example  pyproject.toml
.github/workflows/: docker.yaml
alembic/: README.md
app/: main.py
app/core/: config.py
app/crud/: DatasetCRUD.py  RoleCRUD.py  StepCRUD.py  UserCRUD.py  __init__.py  base.py  crud.py
app/db/: database.py  schemas.py
app/models/: RetrofitStrategyDetails.py  Role.py  Step.py  User.py  __init__.py
app/routers/: datasets.py  roles.py  steps.py  users.py
app/routes/: roles.py  users.py
app/tests/: test_retrofit_strategies.py
