[tool.poetry]
name = "maestro-service"
version = "0.1.0"
description = "Service to manage playbooks"
authors = ["Your Name <you@example.com>"]
license = "MPL 2.0"

[tool.poetry.dependencies]
python = ">= 3.7, <=3.9"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
gunicorn = "^20.1.0"
alembic = "^1.7.7"
psycopg2 = "^2.9.3"
SQLAlchemy = {extras = ["mypy"], version = "~1.4"}
passlib = {extras = ["bcrypt"], version = "~1.7"}
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
requests = "^2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
